--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <center><h1>Татьяна Черняева - официальный сайт певицы</h1></center>
 
-Если вы хотите заказать выступление Татьяны Черняевой на вашем мероприятии, отправьте, пожалуйста, запрос по адресу: 
+Если вы хотите заказать выступление Татьяны Черняевой на вашем мероприятии, отправьте, пожалуйста, запрос по адресу: tatjana.chernjaeva@mail.ru
 
 </body>
 </html>
