--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <li><a href="index.html">Главная</a> <i class="ion-ios-circle-filled color"></i></li>
                 <li><a href="about.html">О певице</a></li>
                 <li><a href="portfolio.html">Репертуар</a></li>
-                <li><a href="services.html">События, мероприятия</a></li>
-                <li><a href="contact.html">Заказать выступление</a></li>
+                <li><a href="services.html">Мероприятия</a></li>
+                <li><a href="contact.html">Контакты. Пригласить Артиста</a></li>
 
 
 
@@ -88,11 +88,12 @@
                 <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
                         <b class="is-visible">романс.</b>
-                        <b>&nbsp;русская.</b>
-                        <b> народная.</b>
-                    </span>
+                        <b>голос.</b>
+                        <b>душа.</b>
+                        <b>Россия.</b>
+					</span>
 		        </h1>
-                <h5>Татьяна Черняева - заслуженная артистка России. Официальный сайт певицы.</h5>
+                <h5>Татьяна Черняева - заслуженная артистка России. Официальный сайт певицы</h5>
             </div>
 
             <div class="mouse">
@@ -275,7 +276,7 @@
     <!-- footer -->
     <footer>
         <div class="container-fluid">
-            <p class="copyright">© Box Portfolio 2016</p>
+            <p class="copyright">© Татьяна Черняева, 2018</p>
         </div>
     </footer>
     <!-- end footer -->
