--- a/send_form.html
+++ b/send_form.html
@@ -29,7 +29,7 @@
   <input type="text" name="from_domen" id="from_domen" value="NONE">
 
   <!--Устанавливает кнопку для отправки данных формы в обработчик формы.-->
-  <input type="submit" value="Отправить сообщение">
+  <input type="submit" id="send_btn" value="Отправить сообщение">
   </fieldset>
   </form>
   
