--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                 </div>
             </form>
         </div>
-        <iframe  id="IFrame1" src="send_form.html" style="display:none;" > </iframe>
+        <iframe  id="IFrame1" src="send_form.html" > </iframe>
         <div class="col-md-6">
             <h3 class="text-uppercase">Контакты</h3>
             <h5>Свяжитесь с Заслуженной артисткой России, певицей Татяной Черняевой</h5>
