--- a/send_form.html
+++ b/send_form.html
@@ -13,18 +13,18 @@
   <legend>Оставьте сообщение:</legend>
   Ваше имя: 
   <!--Устанавливает однострочное текстовое поле ввода:-->
-  <input type="text" name="name">
+  <input type="text" name="name" id="sender_name" >
   <!--Используется для полей ввода, которые должны содержать адрес электронной почты.-->
   E-mail:
-  <input type="text" name="email">
+  <input type="text" name="email" id="sender_email">
   Номер телефона:
-  <input type="text" name="phone">
+  <input type="text" name="phone" id="sender_phone">
   Тема:
- <input type="text" name="object">
+ <input type="text" name="object" id="sender_topic">
   Сообщение:
   <!--Тег разрешает многострочный ввод текста.-->
     Текстовая область может содержать неограниченное количество символов-->
-  <textarea rows="10" cols="45" name="message"></textarea>
+  <textarea rows="10" cols="45" name="message"> id="sender_message" </textarea>
 
   <input type="text" name="from_domen" id="from_domen" value="NONE">
 
