--- a/send_form.html
+++ b/send_form.html
@@ -24,7 +24,7 @@
   Сообщение:
   <!--Тег разрешает многострочный ввод текста.-->
     Текстовая область может содержать неограниченное количество символов-->
-  <textarea rows="10" cols="45" name="message"> id="sender_message" </textarea>
+  <textarea rows="10" cols="45" name="message" id="sender_message">  </textarea>
 
   <input type="text" name="from_domen" id="from_domen" value="NONE">
 
