--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="name">
+                            <input type="text" name="name" id="send_name" >
                             <span>Ваше имя</span>
                         </div>
                     </div>
