--- a/contact.html
+++ b/contact.html
@@ -103,19 +103,19 @@
                     </div>
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="email">
+                            <input type="text" name="email" id="send_email">
                             <span>email</span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="input-contact">
-                            <input type="text" name="object">
+                            <input type="text" name="object" id="send_object">
                             <span>Тема</span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="textarea-contact">
-                            <textarea name="message"></textarea>
+                            <textarea name="message" id="send_message"> </textarea>
                             <span>Сообщение</span>
                         </div>
                     </div>
