--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
         <div class="col-md-6">
             <form action="#" method="post">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="input-contact">
                             <input type="text" name="name" id="send_name" >
                             <span>Ваше имя</span>
@@ -105,6 +105,12 @@
                         <div class="input-contact">
                             <input type="text" name="email" id="send_email">
                             <span>email</span>
+                        </div>
+                    </div>
+					<div class="col-md-6">
+                        <div class="input-contact">
+                            <input type="text" name="phone" id="send_phone">
+                            <span>phone</span>
                         </div>
                     </div>
                     <div class="col-md-12">
