--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 					<div class="col-md-6">
                         <div class="input-contact">
                             <input type="text" name="phone" id="send_phone">
-                            <span>phone</span>
+                            <span>Телефон</span>
                         </div>
                     </div>
                     <div class="col-md-12">
@@ -126,7 +126,6 @@
                         </div>
                     </div>
 					<input type="text" style="display:none;" name="from_domen" value="Tatjana Chernjaeva">
-					<input type="text" style="display:none;" name="phone"> 
                     <div class="col-md-12">
 						<input type="button" class="btn btn-box" value="Отправить" onclick="send_msg()">
                     </div>
