--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li><a href="about.html">О певице</a></li>
                 <li><a href="portfolio.html">Репертуар</a></li>
                 <li><a href="services.html">Мероприятия</a></li>
-                <li><a href="contact.html">Контакты. Пригласить Артиста</a></li>
+                <li><a href="http://tatjana-chernjaeva.ru/contact.html">Контакты. Пригласить Артиста</a></li>
 
 
 
