--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                 <li><a href="about.html">О певице</a></li>
                 <li><a href="portfolio.html">Репертуар</a></li>
                 <li><a href="services.html">Мероприятия</a></li>
-                <li><a href="http://tatjana-chernjaeva.ru/contact.html">Контакты. Пригласить Артиста</a></li>
+                <li><a href="contact.html">Контакты. Пригласить Артиста</a></li>
 
 
                 <li class="box-label">Follow me</li>
@@ -132,7 +132,7 @@
                 </div>
             </form>
         </div>
-        <iframe  id="IFrame1" src="send_form.html" style="display:none;" > </iframe>
+        <iframe  id="IFrame1" src="http://tatjana-chernjaeva.ru/send_form.html" style="display:none;" > </iframe>
         <div class="col-md-6">
             <h3 class="text-uppercase">Контакты</h3>
             <h5>Свяжитесь с Заслуженной артисткой России, певицей Татяной Черняевой</h5>
