--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     <!-- Top bar -->
     <div class="top-bar">
         <h1>О певице </h1>
-        <p><a href="#">Главная</a> / О певице Татьяне Черняевой</p>
+        <p><a href="#">Главная</a> / О Татьяне Черняевой</p>
     </div>
     <!-- end Top bar -->
     
@@ -106,7 +106,7 @@
 			<p>Татьяна Черняева</p>
 
             <div class="col-md-12">
-                 <a href="media/Track01.wav" class="btn btn-box">Слушать</a>
+                 <a href="media/Tatjana-Chernjaeva.mp3" class="btn btn-box">Слушать</a>
             </div>
 
 
