--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <div class="no-padding portfolio_container">
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6  fashion logo">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                    <a href="about.html" class="portfolio_item">
+                        <img src="img/tatjana-chernjaeva_Projects01.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mockups in seconds</span>
-                                    <em>Fashion / Logo</em>
+                                    <span>О Певице</span>
+                                    <em>Татьяна Черняева о себе и своих слушателях</em>
                                 </div>
                             </div>
                         </div>
@@ -125,13 +125,13 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 ads graphics">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                    <a href="http://tatjana-chernjaeva.ru/contact.html" class="portfolio_item">
+                        <img src="img/tatjana-chernjaeva_Projects02.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Floating mockups</span>
-                                    <em>Ads / Graphics</em>
+                                    <span>Контакты</span>
+                                    <em>Свяжитесь с артисткой</em>
                                 </div>
                             </div>
                         </div>
