--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
     <!-- top bar -->
     <div class="top-bar">
         <h1>Свяжитесь со мной</h1>
-        <p><a href="#">Главная</a> / Контакты</p>
+        <p><a href="/">Главная</a> / Контакты</p>
     </div>
     <!-- end top bar -->
 
