--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 
                 <!-- single work -->
                 <div class="col-md-6 col-sm-12 photography">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                    <a href="Tatyana-Chernyaeva-v-programme-Udachnogo-dnya.html" class="portfolio_item">
+                        <img src="img/tatjana-chernjaeva_Projects03.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Photorealistic smartwatch</span>
-                                    <em>Photography</em>
+                                    <span>Татьяна Черняева в программе "Удачного дня"</span>
+                                    <em>Видео</em>
                                 </div>
                             </div>
                         </div>
