--- a/Tatyana-Chernyaeva-v-programme-Udachnogo-dnya.html
+++ b/Tatyana-Chernyaeva-v-programme-Udachnogo-dnya.html
@@ -92,8 +92,10 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-			<iframe  width="800" height="615" src="http://www.youtube.com/embed/v8ybpuvcah0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            <div class="h-30"></div>
+			<div class="thumb-wrap">
+			    <iframe  src="http://www.youtube.com/embed/v8ybpuvcah0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+			<div class="h-30"></div>
         </div>
 
         <div class="col-md-12">
