--- a/Tatyana-Chernyaeva-v-programme-Udachnogo-dnya.html
+++ b/Tatyana-Chernyaeva-v-programme-Udachnogo-dnya.html
@@ -105,9 +105,8 @@
         </div>
 
         <div class="col-md-9">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. Tecum optime, deinde etiam cum mediocri amico. Et nemo nimium beatus est; Ac ne plura complectar-sunt enim innumerabilia-, bene laudata virtus voluptatis aditus ultimum cum ultimo sapientiae Et nemo nimium beatus est </p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliter enim nosmet ipsos nosse non possumus. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. Tecum optime, deinde etiam cum mediocri amico. Et nemo nimium beatus est; Ac ne plura complectar-sunt enim innumerabilia </p>
+            <p>Татьяна Черняева – заслуженная артистка России, исполнительница русских народных песен и романсов. Ее пение – это глоток свежего воздуха, возвращающий нас к исконно русским корням, заставляющий смеяться, плакать, сопереживать.  </p>
+            <p>Учителями и наставниками Черняевой были легендарные певицы отечественной эстрады: Лидия Русланова, Людмила Зыкина, Ирма Яунзем, Изабелла Юрьева. Долгое время певица жила и работала за границей, давала концерты для русских эмигрантов в Лос-Анджелесе, Сиэтле, Нью-Йорке, Вашингтоне, Бостоне. Однако, Черняева, как истинная русская женщина, не смогла долго жить в эмиграции – нет большего счастья, чем выступать на родной земле.</p>
         </div>
 
         <div class="col-md-3">
