--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 fashion ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                    <a href="anons-teleprogrammy-sosedi-s-tatyanoj-chernyaevoj.html" class="portfolio_item">
+                        <img src="img/tatjana-chernjaeva_Projects04.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Held by hands</span>
-                                    <em>Fashion / Ads</em>
+                                    <span>Анонс телепрограммы "Соседи" с Татьяной Черняевой</span>
+                                    <em>Видео</em>
                                 </div>
                             </div>
                         </div>
