--- a/anons-teleprogrammy-sosedi-s-tatyanoj-chernyaevoj.html
+++ b/anons-teleprogrammy-sosedi-s-tatyanoj-chernyaevoj.html
@@ -84,7 +84,7 @@
     
     <!-- top-bar -->
     <div class="top-bar">
-        <h1>Анонс телепрограммы соседи с Татьяной Черняевой</h1>
+        <h1>Анонс телепрограммы "Соседи" с Татьяной Черняевой</h1>
         <p><a href="/">Главная</a> / <a href="portfolio.html">События</a> / Телевидение</p>
     </div>
     <!-- end top-bar -->
@@ -100,13 +100,13 @@
 
         <div class="col-md-12">
             <h3 class="text-uppercase">Татьяна Черняева в программе "Соседи"</h3>
-            <h5>Анонс телепрограммы</h5>
+            <h5>Анонс телепрограммы "Соседи" в воскресном эфире</h5>
             <div class="h-30"></div>
         </div>
 
         <div class="col-md-9">
-            <p>Татьяна Черняева – заслуженная артистка России, исполнительница русских народных песен и романсов. Ее пение – это глоток свежего воздуха, возвращающий нас к исконно русским корням, заставляющий смеяться, плакать, сопереживать.  </p>
-            <p>Учителями и наставниками Черняевой были легендарные певицы отечественной эстрады: Лидия Русланова, Людмила Зыкина, Ирма Яунзем, Изабелла Юрьева. Долгое время певица жила и работала за границей, давала концерты для русских эмигрантов в Лос-Анджелесе, Сиэтле, Нью-Йорке, Вашингтоне, Бостоне. Однако, Черняева, как истинная русская женщина, не смогла долго жить в эмиграции – нет большего счастья, чем выступать на родной земле.</p>
+            <p>Когда россиянин слышит такое словосочетание как «русский романс», в памяти у него, вне всяких сомнений, всплывают такие широко известные исполнители как Изабелла Юрьева, Лидия Русланова, Валентина Пономарева и множество других талантливых артистов из нашей страны. Разумеется, кто-то может сказать, что вышеперечисленные имена уже постепенно отходят в прошлое, однако и сегодня вы можете услышать достойного продолжателя высочайшего искусства исполнения известнейших произведений русского музыкального творчества. Данной исполнительницей является Татьяна Черняева, женщина необычайной душевной доброты, творческая и незаурядная личность. Нестандартное исполнение музыкальных произведений и удивительный тембр голоса Татьяны Черняевой неизменно завораживают слушателей. </p>
+            <p>У этой артистки есть, в самом деле, божественный дар. Проницательный голос певицы и ее трогающее за душу исполнение любимых музыкальных произведений передают особый шарм такого музыкального направления как русский романс. При этом на каждом выступлении Татьяны создается действительно праздничная и радостная атмосфера, благодаря которой каждый участник торжественного мероприятия переживает незабываемое ощущение сопричастности к чудесному миру музыки. </p>
         </div>
 
         <div class="col-md-3">
