--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
            <div class="h-30"></div>
             <p>Дорогие друзья! </p>
             <p>Вся моя жизнь посвящена пению на сцене,  и особенно  русскому романсу и русским народным  песням.  Проведя значительную часть  времени  за рубежом, работая в  Америке, Европе и в других странах, я всей душой осознала,  что мне приятнее всего петь  в России.</p>
-            <p>Я очень люблю свои песни, и пою их даже тогда, когда нет заказа и оплаты за выступление.  Для ветеранов,  инвалидов,  детей.  Их чувства и слова благодарности порой лучшая награда для артиста.</p>
+            <p>Я очень люблю свои песни, и пою их даже тогда, когда нет заказа и оплаты за выступление.  Для ветеранов,  инвалидов,  детей, людей стршего поколения.  Их чувства и слова благодарности порой лучшая награда для артиста.</p>
             <p>Если Вы пригласите меня на свое мероприятие – день рождения, свадьбу, профессиональный праздник, концерт, или другое торжественное событие, я с удовольствием  приеду и спою одну или несколько своих песен по Вашему выбору.</p>
             <p>Вы можете послушать  фрагменты моих песен в аудиозаписи по кнопке ниже. Надеюсь,  они Вам понравятся.</p>
 			<p>Искренне Ваша,</p>
