--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
 
                 <!-- single work -->
                 <div class="col-md-3 col-sm-6 graphics ads">
-                    <a href="single-project.html" class="portfolio_item">
-                        <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                    <a href="tatyana-chernyaeva-teleprogramma-sosedi.html" class="portfolio_item">
+                        <img src="img/tatjana-chernjaeva_Projects05.jpg" alt="image" class="img-responsive" />
                         <div class="portfolio_item_hover">
                             <div class="portfolio-border clearfix">
                                 <div class="item_info">
-                                    <span>Mobile devices</span>
-                                    <em>Graphics / Ads</em>
+                                    <span>Татьяна Черняева в телепрограмме "Соседи"</span>
+                                    <em>Видео</em>
                                 </div>
                             </div>
                         </div>
