--- a/tatyana-chernyaeva-teleprogramma-sosedi.html
+++ b/tatyana-chernyaeva-teleprogramma-sosedi.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Анонс телепрограммы соседи с Татьяной Черняевой</title>
+    <title>Татьяна Черняева. Эфир телепрограммы "Соседи"</title>
     <link rel="icon" href="img/fav.png" type="image/x-icon">
 
-    <meta name="description" content="анонс телепрограммы Cоседи с татьяной черняевой" />
-    <meta name="keywords" content="анонс телепрограммы Соседи с Татьяной Черняевой" />
+    <meta name="description" content="Воскресный эфир телепрограммы Cоседи с Татьяной Черняевой. Ведущий Дмитрий Быков" />
+    <meta name="keywords" content="телепрограмма Соседи с Татьяной Черняевой" />
 	
 	
     <!-- Bootstrap -->
@@ -84,7 +84,7 @@
     
     <!-- top-bar -->
     <div class="top-bar">
-        <h1>Анонс телепрограммы "Соседи" с Татьяной Черняевой</h1>
+        <h1>Татьяна Черняева в телепрограмме "Соседи"</h1>
         <p><a href="/">Главная</a> / <a href="portfolio.html">События</a> / Телевидение</p>
     </div>
     <!-- end top-bar -->
@@ -93,20 +93,20 @@
     <div class="container main-container">
         <div class="col-md-12">
 			<div class="thumb-wrap">
-			    <iframe  src="http://www.youtube.com/embed/nw-k5xPHioQ?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			    <iframe  src="http://www.youtube.com/embed/gFeaLAyoHKs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
 			<div class="h-30"></div>
         </div>
 
         <div class="col-md-12">
             <h3 class="text-uppercase">Татьяна Черняева в программе "Соседи"</h3>
-            <h5>Анонс телепрограммы "Соседи" в воскресном эфире</h5>
+            <h5>Телепрограмма "Соседи" в воскресном эфире. Ведущий Дмитрий Быков</h5>
             <div class="h-30"></div>
         </div>
 
         <div class="col-md-9">
-            <p>Когда россиянин слышит такое словосочетание как «русский романс», в памяти у него, вне всяких сомнений, всплывают такие широко известные исполнители как Изабелла Юрьева, Лидия Русланова, Валентина Пономарева и множество других талантливых артистов из нашей страны. Разумеется, кто-то может сказать, что вышеперечисленные имена уже постепенно отходят в прошлое, однако и сегодня вы можете услышать достойного продолжателя высочайшего искусства исполнения известнейших произведений русского музыкального творчества. Данной исполнительницей является Татьяна Черняева, женщина необычайной душевной доброты, творческая и незаурядная личность. Нестандартное исполнение музыкальных произведений и удивительный тембр голоса Татьяны Черняевой неизменно завораживают слушателей. </p>
-            <p>У этой артистки есть, в самом деле, божественный дар. Проницательный голос певицы и ее трогающее за душу исполнение любимых музыкальных произведений передают особый шарм такого музыкального направления как русский романс. При этом на каждом выступлении Татьяны создается действительно праздничная и радостная атмосфера, благодаря которой каждый участник торжественного мероприятия переживает незабываемое ощущение сопричастности к чудесному миру музыки. </p>
+            <p>Еще с детства Таня поняла, что ее голос дарован ей для несения людям радости и наполнения их сердец добротой и настоящей любовью. Так и получилось, что девушка приняла решение связать свою жизнь с музыкальным искусством. Окончив школу, Татьяна поступает в столичное музучилище имени Ипполитова-Иванова на вокально-народное отделение, выдержав невероятно напряженный конкурс – около двухсот абитуриентов на одно место. Большой удачей в жизни для Тани было встретить столь талантливых людей как Ирма Яунзем, Лидия Русланова, Изабелла Юрьева, а также Людмила Зыкина. Тане посчастливилось соприкоснуться с высоким профессионализмом столь легендарных личностей, добрые рекомендации которых поспособствовали профессиональному становлению Черняевой. После завершения учебы в музыкальном училище талантливую девушку пригласили работать в Питер (в Ленконцерт). Она немало гастролировала по Росси. </p>
+            <p>После этого Татьяне пришлось немало лет прожить за границей, выступая во множестве стран для самой разношерстной публики: в столице Франции (в шоу «Лидо»), на Канарах («Шоу – Интернейшнл»). На счету Черняевой есть немало концертов во множестве американских городов: Лос-Анджелес, Сиэтл, Нью-Йорк, Вашингтон, Бостон и так далее. Выступала Татьяна и для эмигрантов из России</p>
         </div>
 
         <div class="col-md-3">
@@ -114,7 +114,7 @@
                 <li><i class="ion-ios-circle-filled"></i> Татьяна Черняева</li>
                 <li><i class="ion-ios-circle-filled"></i> События</li>
                 <li><i class="ion-ios-circle-filled"></i> Телевидение</li>
-                <li><i class="ion-ios-circle-filled"></i> Анонс программы "Соседи"</li>
+                <li><i class="ion-ios-circle-filled"></i> "Соседи" с Дмитрием Быковым</li>
             </ul>
             <div class="h-10"></div>
             <h4>Share</h4>
