--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     <!-- Top bar -->
     <div class="top-bar">
         <h1>О певице </h1>
-        <p><a href="/">Главная</a> / О Татьяне Черняевой</p>
+        <p><a href="index.html">Главная</a> / О Татьяне Черняевой</p>
     </div>
     <!-- end Top bar -->
     
