--- a/tatyana-chernyaeva-teleprogramma-sosedi.html
+++ b/tatyana-chernyaeva-teleprogramma-sosedi.html
@@ -85,7 +85,7 @@
     <!-- top-bar -->
     <div class="top-bar">
         <h1>Татьяна Черняева в телепрограмме "Соседи"</h1>
-        <p><a href="/">Главная</a> / <a href="portfolio.html">События</a> / Телевидение</p>
+        <p><a href="index.html">Главная</a> / <a href="portfolio.html">События</a> / Телевидение</p>
     </div>
     <!-- end top-bar -->
     
