--- a/anons-teleprogrammy-sosedi-s-tatyanoj-chernyaevoj.html
+++ b/anons-teleprogrammy-sosedi-s-tatyanoj-chernyaevoj.html
@@ -85,7 +85,7 @@
     <!-- top-bar -->
     <div class="top-bar">
         <h1>Анонс телепрограммы "Соседи" с Татьяной Черняевой</h1>
-        <p><a href="/">Главная</a> / <a href="portfolio.html">События</a> / Телевидение</p>
+        <p><a href="index.html">Главная</a> / <a href="portfolio.html">События</a> / Телевидение</p>
     </div>
     <!-- end top-bar -->
     
