--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="description" content="Татьяна Черняева. Официальный сайт заслуженной артистки России, певицы, исполнительницы цыганских романсов и русских народных песен" />
     <meta name="keywords" content="Татьяна Черняева, певица, цыганский романс, русские народные песни" />
 
+	<meta name="yandex-verification" content="e7a3908013d49c4e" />
 	
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
