--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,7 @@
 			<p>Ваша Татьяна Черняева </p>
 			<div class="contact-info">
                 <p><i class="ion-ios-email"></i> tatjana.chernjaeva@mail.ru</p>
+		<p><i class="ion-android-call"></i> +7(916)357-7168</p>
             </div>
         </div>
 
